# prism

./: .gitignore  LICENSE  README.md  README_PYPI.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: sample_corpus.py
benchmarks/fever/: README.md  build_corpus.py  run_benchmark.py  score.py
examples/: governance_search.py  prism-graph-2026-04-21.html  quinn-graph-2026-04-23.html
paper/: main.html  main.tex  render_pdf.py
prism/: __init__.py  activation.py  cli.py  edges.py  export_cli.py  extractor.py  filter.py  graph.py  inspect_cli.py  prism.py  result.py  retriever.py  viz_cli.py
prism/adapters/: __init__.py  base.py  chroma.py  embedder.py  lancedb.py  pgvector.py  qdrant.py  template.py  weaviate.py
prism/explorer/: server.py
prism/explorer/static/: index.html
scripts/: build_graph.py
tests/: test_activation.py  test_chroma_adapter.py  test_edges.py  test_extractor.py  test_graph.py  test_graph_export.py  test_new_behaviour.py  test_pgvector_adapter.py  test_qdrant_adapter.py  test_result.py  test_retriever.py  test_viz_cli.py  test_weaviate_adapter.py
