[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-rag"
version = "0.1.0"
description = "PRISM: Epistemic Graph RAG with Spreading Activation — retrieval that understands how knowledge relates, not just what it says"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["rag", "knowledge-graph", "epistemic", "spreading-activation", "retrieval"]
dependencies = [
    "networkx>=3.0",
    "lancedb>=0.10",
    "pyarrow>=12.0",
    "numpy>=1.24",
    "requests>=2.28",
    "pydantic>=2.0",
    "rich>=13.0",
    "tqdm>=4.64",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio"]

[project.scripts]
prism-build = "prism.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["prism*"]
