[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prism-rag"
version = "0.2.1"
description = "Epistemic Graph RAG with Spreading Activation — retrieval that understands how knowledge relates, not just what it says"
readme = "README_PYPI.md"
requires-python = ">=3.11"
license = "MIT"
keywords = [
    "rag", "retrieval", "knowledge-graph", "graph-rag",
    "epistemic", "spreading-activation", "lancedb", "llm", "nlp"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "networkx>=3.0",
    "lancedb>=0.10",
    "pyarrow>=12.0",
    "numpy>=1.24",
    "requests>=2.28",
    "pydantic>=2.0",
    "rich>=13.0",
    "tqdm>=4.64",
    "scipy>=1.10",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "black",
    "ruff",
    "mypy",
]

[project.urls]
Homepage   = "https://github.com/MadMando/prism"
Repository = "https://github.com/MadMando/prism"
Issues     = "https://github.com/MadMando/prism/issues"

[project.scripts]
prism-build = "prism.cli:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["prism*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py311"
